# deepstruct

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  development.md  environment.yml  high-level-trans.ipynb  mkdocs.yml  pypaddle  pyproject.toml  setup.py
.github/workflows/: main.yml
deepstruct/: __version__.py  constants.py  dataset.py  deprecated.py  flexible_transform.py  graph.py  graph_class.py  graph_generator.py  learning.py  models.py  node_map_strategies.py  playaround.py  pruning.py  recurrent.py  scalable.py  sparse.py  topologie_representation.py  transform.py  traverse_strategies.py  util.py
deepstruct/pruning/: engine.py  strategy.py  util.py
docs/: index.md  methods-pruning-growing.graphml  mkdocs.yml  sparse-network.graphml
paddle/: deprecated.py  learning.py  pruning.py  util.py
pypaddle/: __version__.py  deprecated.py  learning.py  pruning.py  scalable.py  sparse.py  util.py
test/: test_CachedLayeredGraph.py  test_DeepCellDAN.py  test_DeepDACellNetwork.py  test_FFN2DAN.py  test_LayerIndex.py  test_MaskedDeepDAN.py  test_MaskedDeepFFN.py  test_MaskedLinearLayer.py
tests/: test_CachedLayeredGraph.py  test_DeepCellDAN.py  test_FFN2DAN.py  test_LayerIndex.py  test_MaskableModule.py  test_MaskedDeepDAN.py  test_MaskedDeepFFN.py  test_MaskedLinearLayer.py  test_flexible_transform.py  test_low_level_rep.py  test_pruning.py  test_recurrent.py  util.py
tests/graph/: test_CachedLayeredGraph.py  test_LabeledDAG.py
tests/graph_generator/: test_Architectures.py  test_GraphGenerator.py  test_TensorsData.py
tests/large/: test_GraphTransform.py
tests/models/: test_DeepGraphModule.py
tests/pruning/: test_engine_basic.py
tests/scalable/: test_scalable_dan.py
tests/sparse/: test_DeepCellDAN.py  test_MaskedDeepDAN.py  test_MaskedDeepFFN.py  test_MaskedLinearLayer.py
tests/training/: test_MaskedLinearLayer.py
tests/transform/: test_Conv2dLayerFunctor.py  test_GraphTransform.py  test_LinearLayerFunctor.py
