[tool.poetry]
name = "deepstruct"
version = "0.9.0"
description = ""
authors = [
    "Julian Stier <julian.stier@uni-passau.de>"
]
license = "MIT"

include = [
    "pyproject.toml",
    "README.md"
]

readme = "README.md"

homepage = "https://github.com/innvariant/deepstruct"
repository = "https://github.com/innvariant/deepstruct"
documentation = "https://deepstruct.readthedocs.io"

keywords = ["neural network", "sparsity", "machine learning", "structure", "graph", "training"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.4"
networkx = "^2.0"
importlib-metadata = "^4.4"
importlib-resources = "^5.0"
semantic_version = "^2.10"
deprecated = "^1.2.10"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
matplotlib = { version = "^3.3" }
pre-commit = "^2.3.0"
pytest = "^7.1"
pytest-mock = "^3.0.0"
pyfakefs = "^4.0.2"
torchvision = "^0.6.1"
mkdocs = "^1.1.2"

[tool.isort]
profile = "black"
line_length = 88
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
filter_files = true
src_paths = ["deepstruct", "tests"]
skip_glob = ["*/setup.py", "res/"]
known_first_party = "deepstruct"
known_third_party = ["importlib_metadata", "importlib_resources", "pyfakefs", "pytest", "semantic_version", "torch" ]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | res
  | build
  | dist
  | tests/cache/
  | tests/.*/setup.py
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
